Prevent vertical shift of controls after adding cards

--- a/assets/poker.css
+++ b/assets/poker.css
@@ -1,3 +1,3 @@
 .card.svelte-10xoif8{width:45px;height:70px;border-radius:6px;border:1px solid blue;background-color:rgb(214, 245, 255);padding:6px 2px;text-align:center;margin:4px auto}.isAdmin.svelte-10xoif8{border:2px solid blue}
 .participant.svelte-ef8jv9{display:block;position:absolute;text-align:center;top:95%;left:50%;margin:-2em;border-radius:100%;border:1px dotted yellow}
-.participants.svelte-1a31h03{width:70vw;height:35vw;border-radius:35vw 35vw 0 0;position:relative;background-color:#eee;margin:20px auto}.controls.svelte-1a31h03{position:absolute;bottom:0;left:50%;transform:translateX(-50%) translateY(-25%)}
+.participants.svelte-5wgf4k{width:70vw;height:35vw;border-radius:35vw 35vw 0 0;position:relative;background-color:#eee;margin:20px auto}.controls.svelte-5wgf4k{position:absolute;bottom:0;left:50%;transform:translateX(-50%) translateY(-10px)}
